# binance-mcp

./: .env.example  .gitignore  README.md  claude_desktop_config.example.json  package-lock.json  package.json  pyproject.toml  test_connection.py  test_mcp_server.py
.github/workflows/: publish.yml
src/: client.ts  index.ts  utils.ts
src/binance_mcp/: __init__.py  __main__.py  server.py
src/binance_mcp/tools/: __init__.py  account.py  market.py  trading.py
src/tools/: account.ts  market.ts  trading.ts
tests/: __init__.py  conftest.py  test_integration_account.py  test_integration_market.py  test_integration_trading.py  test_server.py
